--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               >
             </li>
 
-            <li class="address-list-item>
+            <li class="address-list-item">
               <a href="tel:+110001111111" class="address-link"
                 >+11 (000) 111-11-11</a
               >
@@ -66,7 +66,7 @@
       <!-- Advantages section -->
       <section class="section">
         <div class="container-advantages container">
-          <h2 class="section-title">Advantages</h2>
+          <h2 class="visually-hidden">Advantages</h2>
           <ul class="advantages-list">
             <li class="advantages-list-item">
               <h3 class="subtitle">Strategy</h3>
@@ -75,21 +75,21 @@
                 the perfect and creative solution.
               </p>
             </li>
-            <li  class="advantages-list-item">
+            <li class="advantages-list-item">
               <h3 class="subtitle">Punctuality</h3>
               <p class="text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li  class="advantages-list-item">
+            <li class="advantages-list-item">
               <h3 class="subtitle">Diligence</h3>
               <p class="text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li  class="advantages-list-item">
+            <li class="advantages-list-item">
               <h3 class="subtitle">Technologies</h3>
               <p class="text">
                 Design practice focused on digital experiences. We bring forth a
@@ -99,7 +99,7 @@
           </ul>
         </div>
       </section>
-      <!-- -----Our Team----- -->
+      <!-- Our Team -->
       <section class="our-team section">
         <div class="container">
           <h2 class="section-title">Our Team</h2>
@@ -112,8 +112,8 @@
                 height="260"
               />
               <div class="our-team-item-bottom">
-              <h3 class="subtitle">Mark Guerrero</h3>
-              <p class="text">Product Designer</p>
+                <h3 class="subtitle">Mark Guerrero</h3>
+                <p class="text">Product Designer</p>
               </div>
             </li>
             <li class="our-team-item">
@@ -124,8 +124,8 @@
                 height="260"
               />
               <div class="our-team-item-bottom">
-              <h3 class="subtitle">Tom Ford</h3>
-              <p class="text">Frontend Developer</p>
+                <h3 class="subtitle">Tom Ford</h3>
+                <p class="text">Frontend Developer</p>
               </div>
             </li>
             <li class="our-team-item">
@@ -136,8 +136,8 @@
                 height="260"
               />
               <div class="our-team-item-bottom">
-              <h3 class="subtitle">Camila Garcia</h3>
-              <p class="text">Marketing</p>
+                <h3 class="subtitle">Camila Garcia</h3>
+                <p class="text">Marketing</p>
               </div>
             </li>
             <li class="our-team-item">
@@ -148,14 +148,14 @@
                 height="260"
               />
               <div class="our-team-item-bottom">
-              <h3 class="subtitle">Daniel Wilson</h3>
-              <p class="text">UI Designer</p>
+                <h3 class="subtitle">Daniel Wilson</h3>
+                <p class="text">UI Designer</p>
               </div>
             </li>
           </ul>
         </div>
       </section>
-      <!-- ------Our Portfolio------ -->
+      <!-- Our Portfolio -->
 
       <section class="section">
         <div class="container">
@@ -240,7 +240,7 @@
     <!-- Footer section -->
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="logo-text"
+        <a href="./index.html" class="logo-text footer-link"
           >Web<span class="logo-footer-accent">Studio</span></a
         >
         <p class="text text-footer">
