--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Header section -->
     <header>
       <div class="header-container container">
-        <nav class="nav">
+        <nav class="navigation">
           <a href="./index.html" class="logo-text"
             >Web<span class="logo-header-accent">Studio</span></a
           >
