Correction work with tutor

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <!-- Header section -->
-    <header>
+    <header class="section-header">
       <div class="header-container container">
         <nav class="navigation">
           <a href="./index.html" class="logo-text"
